# WebEncrypt

./: .gitignore  style.css
.github/workflows/: deploy.yml
frontend/: .gitignore  deploy.yml  index.html  main.js
frontend/pkg/: package.json  rust_crypto.js
pkg/: rust_crypto.d.ts  rust_crypto_bg.wasm  rust_crypto_bg.wasm.d.ts
rust-crypto/: Cargo.toml
rust-crypto/pkg/: rust_crypto.d.ts  rust_crypto.js  rust_crypto_bg.wasm  rust_crypto_bg.wasm.d.ts
rust-crypto/src/: lib.rs
